--- a/example/pom.xml
+++ b/example/pom.xml
@@ -13,6 +13,11 @@
 	<name>canal example module for otter ${project.version}</name>
 	<dependencies>
 		<dependency>
+			<groupId>org.quartz-scheduler</groupId>
+			<artifactId>quartz</artifactId>
+			<version>2.2.1</version>
+		</dependency>
+		<dependency>
 			<groupId>redis.clients</groupId>
 			<artifactId>jedis</artifactId>
 			<version>2.7.3</version>
