添加redis过期hash处理 定时任务

--- a/example/src/main/resources/sync-redis.properties
+++ b/example/src/main/resources/sync-redis.properties
@@ -11,7 +11,7 @@ sync.destination.port = 11111
 sync.mysql.excludes = test,tank_global
 
 # default sync, all the dbs update with use this config exclude those special config dbs
-sync.mysql.dbname.0 = *
+sync.mysql.dbname.0 = all_db
 sync.redis.host.0 = 127.0.0.1
 sync.redis.port.0 = 14001
 sync.redis.expire.0 = 300
@@ -23,7 +23,7 @@ sync.redis.port.1 = 14001
 sync.redis.expire.1 = 300
 
 # special db testphp
-sync.mysql.dbname.2 = testphp
+sync.mysql.dbname.2 = jframe
 sync.redis.host.2 = 127.0.0.1
 sync.redis.port.2 = 14001
 sync.redis.expire.2 = 300
